Rewrite of the part of the code that touches the windows registry, allowing me to remove the last mandatory runtime dependency. The library can now be used as a standalone.
JNA is now an optional dependency behind the `jna` feature. In it's absence, we fall back to using `REG QUERY`.